[ADD] Tests de Search Activity